--- a/app/views/userstemplate/index.html.erb
+++ b/app/views/userstemplate/index.html.erb
@@ -1,9 +1,11 @@
 <h1> List of users </h1>
 
-<form action="/users">
+<form action="/insert_username">
   <label for="entered_username" > Username</label>
-  <input type="" id="entered_username" value = "Enter a username...">
-  <input type="submit" id ="submit_username" value="Add user" >
+  <input type="" id="entered_username" placeholder = "Enter a username..." name="input_username">
+  <button> 
+    Add user 
+  </button>
 </form>
 
 <br>
